<resources>
    <string name="app_name">Mr Lift</string>
    <string name="get_started">Get Started</string>
    <string name="seat_count">Seat Count</string>
    <string name="start_city">Start City</string>
    <string name="end_city">End City</string>
    <string name="motor_bike">Motor Bike</string>
    <string name="three_wheeler">Three Wheeler</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="sign_in">Sign In</string>
</resources>