<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="0dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="0dp"
      android:layout_marginBottom="0dp"
      android:background="@drawable/background2"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login_to_your_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/my_secondary"
        android:textColorHint="@color/material_dynamic_neutral40"
        android:textStyle="bold"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/my_secondary"
        android:textColorHint="@color/material_dynamic_neutral40"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_forgotpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="right"
        android:text="Forgot password?"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#0080FF"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp">

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/don_t_have_an_account"
          android:textColor="#000000"
          android:textSize="16sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/btn_regnow"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:gravity="center"
          android:text="@string/register_now"
          android:textColor="@color/white"
          android:textColorLink="#8D8D8D"
          android:textSize="16sp"
          android:textStyle="bold" />
    </LinearLayout>

  </LinearLayout>
</RelativeLayout>