<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    tools:context=".location">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="#078CF6"
                android:contentDescription="TODO"
                android:rotationY="-180"
                app:srcCompat="@drawable/baseline_arrow_forward_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="end"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="end"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/white"
            android:text="Where To ?"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/vehicle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_field">

                <RadioButton
                    android:id="@+id/rdb_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:textColor="@color/white"
                    app:buttonTint="@color/my_secondary"
                    android:text="Car" />

                <RadioButton
                    android:id="@+id/rdb_tuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:textColor="@color/white"
                    app:buttonTint="@color/my_secondary"
                    android:text="@string/three_wheeler" />

                <RadioButton
                    android:id="@+id/rdb_mb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:buttonTint="@color/my_secondary"
                    android:text="@string/motor_bike" />

            </RadioGroup>

            <EditText
                android:id="@+id/txt_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/baseline_my_location_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:textColorHint="@color/my_secondary"
                android:textColor="@color/black"
                android:hint="@string/start_city"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txt_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/baseline_add_location_alt_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:textColorHint="@color/my_secondary"
                android:textColor="@color/black"
                android:hint="@string/end_city"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#0080FF"
                    android:drawableStart="@drawable/baseline_search_24"
                    android:gravity="center"
                    android:text="@string/search"
                    android:textColor="#000000"
                    android:visibility="visible"
                    app:icon="@drawable/baseline_search_24"
                    app:iconPadding="2dp"
                    app:iconTint="@color/black" />

            </LinearLayout>

            <ListView
                android:id="@+id/orderlist"
                android:layout_width="match_parent"
                android:layout_height="221dp"
                android:background="@drawable/tab_design"
                android:divider="@drawable/tab_design"
                android:dividerHeight="10sp"
                android:padding="10dp"
                android:visibility="invisible"
                tools:listfooter="hello"
                tools:listitem="@layout/list_item" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>